--- a/styles/globals.css
+++ b/styles/globals.css
@@ -90,3 +90,9 @@ body {
 .ant-btn{
   margin: 0 4px;
 }
+
+.custom-range-picker-dropdown {
+  max-width: 100vw;
+  width: auto !important;
+  overflow-x: auto;
+}
